added `audit` stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,18 @@ stages:
 
 test:
   stage: test
+  except:
+    - schedules
   services:
     - mongo:latest
   script:
     - yarn install --pure-lockfile --cache-folder .yarn
     - yarn test:ci
   coverage: '/^Statements\s*:\s*([^%]+)/'
+
+audit:
+  stage: audit
+  only:
+  - schedules
+  script:
+    - yarn audit
