--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
@@ -21,19 +21,19 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "fastify": "^2.12.0",
+    "fastify": "^3.2.0",
     "fastify-mongodb": "^2.0.0",
-    "fastify-sensible": "^2.1.1",
+    "fastify-sensible": "^3.0.1",
     "lint-staged": "^10.0.7",
-    "prettier": "^1.18.2",
-    "tap": "^14.10.6",
+    "prettier": "^2.0.5",
+    "tap": "^14.10.8",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
     "env-schema": "^1.0.0",
-    "fastify-plugin": "^1.6.0",
-    "fastify-secure-session": "^1.1.1",
-    "secure-password": "^3.1.0"
+    "fastify-plugin": "^2.2.0",
+    "fastify-secure-session": "^2.2.1",
+    "secure-password": "^4.0.0"
   },
   "scripts": {
     "lint": "eslint '**/*.js' --fix",
@@ -46,8 +46,7 @@
   },
   "lint-staged": {
     "*.{js}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
