--- a/package.json
+++ b/package.json
@@ -13,14 +13,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "@uscreen.de/eslint-config-prettystandard-node": "^0.1.2",
     "fastify": "^3.3.0",
     "fastify-mongodb": "^2.0.0",
     "fastify-sensible": "^3.0.1",
@@ -30,8 +23,8 @@
     "yorkie": "^2.0.0"
   },
   "dependencies": {
-    "env-schema": "^1.0.0",
-    "fastify-plugin": "^2.3.3",
+    "env-schema": "^2.0.1",
+    "fastify-plugin": "^3.0.0",
     "fastify-secure-session": "^2.2.1",
     "secure-password": "^4.0.0"
   },
