--- a/package.json
+++ b/package.json
@@ -13,33 +13,29 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@uscreen.de/eslint-config-prettystandard-node": "^0.1.3",
-    "fastify": "^3.17.0",
-    "fastify-mongodb": "^2.0.0",
-    "fastify-sensible": "^3.1.1",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.1.1",
-    "tap": "^15.0.9",
-    "yorkie": "^2.0.0"
+    "@uscreen.de/eslint-config-prettystandard-node": "^0.2.0",
+    "eslint": "^8.5.0",
+    "fastify": "^3.25.3",
+    "fastify-mongodb": "^3.0.0",
+    "fastify-sensible": "^3.1.2",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "tap": "^15.1.6"
   },
   "dependencies": {
-    "env-schema": "^3.0.1",
+    "env-schema": "^3.5.1",
     "fastify-plugin": "^3.0.0",
-    "fastify-secure-session": "^2.3.1",
+    "fastify-secure-session": "^3.0.0",
     "secure-password": "^4.0.0"
   },
   "scripts": {
     "lint": "eslint '**/*.js' --fix",
     "test": "tap test/**/*.test.js",
     "test:cov": "tap --coverage-report=html test/**/*.test.js",
-    "test:ci": "tap --coverage-report=text-summary test/**/*.test.js"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+    "test:ci": "tap --coverage-report=text-summary test/**/*.test.js",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js}": [
-      "eslint --fix"
-    ]
+    "*.js": "eslint --cache --fix"
   }
 }
