--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@uscreen.de/eslint-config-prettystandard-node": "^0.2.1",
+    "@uscreen.de/eslint-config-prettystandard-node": "^0.2.2",
+    "@uscreen.de/fastify-mongo-crud": "^0.4.4",
     "eslint": "^8.8.0",
     "fastify": "^3.27.0",
     "fastify-mongodb": "^3.0.0",
