--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@uscreen.de/dev-service": "^0.11.7",
     "@uscreen.de/eslint-config-prettystandard-node": "^0.2.2",
     "@uscreen.de/fastify-mongo-crud": "^0.4.4",
     "eslint": "^8.8.0",
-    "fastify-mongodb": "^3.0.0",
     "fastify": "^3.27.1",
+    "fastify-mongodb": "^3.0.0",
     "fastify-sensible": "^3.1.2",
     "husky": ">=6",
     "lint-staged": ">=12.3.3",
@@ -38,5 +39,8 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
-  }
+  },
+  "services": [
+    "mongo"
+  ]
 }
