--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uscreen.de/fastify-mongo-auth",
-  "version": "0.3.16",
+  "version": "1.0.0-0",
   "description": "Stateless session backed by authentication against mongodb collection",
   "main": "index.js",
   "repository": {
