--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@fastify/mongodb": "^6.1.0",
+    "@fastify/sensible": "^5.1.1",
     "@uscreen.de/dev-service": "^0.11.21",
     "@uscreen.de/eslint-config-prettystandard-node": "^0.2.10",
-    "@uscreen.de/fastify-mongo-crud": "^0.4.12",
+    "@uscreen.de/fastify-mongo-crud": "^1.0.0-1",
     "c8": "^7.12.0",
-    "fastify": "^3.29.0",
-    "fastify-mongodb": "^3.0.0",
-    "fastify-sensible": "^3.2.0",
+    "fastify": "^4.10.2",
     "husky": ">=8.0.2",
     "lint-staged": ">=13.0.3",
     "tap": "^16.3.2"
   },
   "dependencies": {
+    "@fastify/secure-session": "^5.2.0",
     "env-schema": "^5.1.1",
-    "fastify-plugin": "^3.0.1",
-    "fastify-secure-session": "^3.2.0",
+    "fastify-plugin": "^4.3.0",
     "secure-password": "^4.0.0"
   },
   "scripts": {
