--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    target-branch: "master"
+    target-branch: "main"
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
@@ -18,4 +18,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    target-branch: "next"
+    target-branch: "legacy"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
