--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "@uscreen.de/fastify-mongo-crud": "^1.0.0-1",
     "c8": "^8.0.0",
     "fastify": "^4.13.0",
-    "husky": ">=8.0.2",
-    "lint-staged": ">=13.1.2",
     "tap": "^16.3.4"
   },
   "dependencies": {
@@ -36,11 +34,7 @@
     "lint": "eslint '**/*.js' --fix",
     "test": "c8 tap",
     "test:cov": "c8 --reporter=html --reporter=text tap",
-    "test:ci": "c8 --reporter=lcovonly tap",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "test:ci": "c8 --reporter=lcovonly tap"
   },
   "services": [
     "mongo"
