--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@uscreen.de/dev-service": "^0.12.3",
     "@uscreen.de/eslint-config-prettystandard-node": "^0.2.11",
     "@uscreen.de/fastify-mongo-crud": "^1.0.0-1",
+    "@uscreen.de/id-generator": "^1.0.0",
     "c8": "^8.0.0",
-    "fastify": "^4.13.0",
-    "tap": "^16.3.4"
+    "fastify": "^4.13.0"
   },
   "dependencies": {
     "@fastify/secure-session": "^7.0.0",
@@ -32,9 +32,9 @@
   },
   "scripts": {
     "lint": "eslint '**/*.js' --fix",
-    "test": "c8 tap",
-    "test:cov": "c8 --reporter=html --reporter=text tap",
-    "test:ci": "c8 --reporter=lcovonly tap"
+    "test": "node --test --test-reporter spec",
+    "test:cov": "c8 --reporter=html --reporter=text node --test",
+    "test:ci": "c8 --reporter=lcovonly --reporter=text node --test"
   },
   "services": [
     "mongo"
